# hinataos

./: .gitignore  Makefile  README.md  run.sh
bootloader/: Cargo.toml
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
common/: Cargo.toml  x86_64-hinataos.json
common/.cargo/: config.toml
common/src/: lib.rs  types.rs
font/src/: main.rs
kernel/: Cargo.toml  x86_64-hinataos.json
kernel/.cargo/: config.toml
kernel/src/: cache.rs  console.rs  font.rs  gdt.rs  graphics.rs  interrupts.rs  lib.rs  main.rs  memory.rs  paging.rs  print.rs  serial.rs  vga.rs
kernel/src/graphics/: console.rs  mod.rs
