[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.24.0", features = ["alloc"] }
uefi-services = "0.21.0"
elf = { version = "0.7.2", features = ["nightly"], default-features = false}
common = { path = "../common"}

[[bin]]
name = "bootloader"
test = false
bench = false