[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
x86_64 = { version = "0.14.10", features = ["instructions","nightly"] }
spin = { version ="0.9.8" }
volatile = "0.5.1"

[[bin]]
name = "kernel"
test = false
bench = false
